Bug 1825274: Adding nowrap to subscribe/unsubscribe buttons
So the stay on one line when in small screen mode

behatnotneeded

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -854,3 +854,7 @@ div.form-group .form-control-label {
 a.online-users {
     text-align: left;
 }
+
+#forums-list .button {
+    white-space: nowrap;
+}
